--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/style/dist/style.css">
+    <script src="/script.js" defer></script>
 </head>
 <body>
     <header>
         <div class="wrapper">
-            <div class="wrapper_logo">
+            <div class="wrapper-logo">
                 <img src="/img/logo.png" alt="#">
             </div>
-            <nav>
-                <a href="">Home page</a>
-                <a href="">Login</a>
-                <a href="">Register</a>
-            </nav>
             <div class="wrapper-hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
         </div>
+        <nav>
+            <a href="#">Home page</a>
+            <a href="#">Login</a>
+            <a href="#">Register</a>
+        </nav>
     </header>
     <main>
 
